--- a/frontend/assets/css/header/fold-out-menu.scss
+++ b/frontend/assets/css/header/fold-out-menu.scss
@@ -4,7 +4,7 @@
     position: absolute;
     width: 100vw;
     right: 0;
-    top: 78px;
+    top: 75px;
     padding-top: 3rem;
     max-width: 400px;
     animation: fold-out-menu 0.5s ease-in-out 0s 1 normal none;
