--- a/frontend/assets/css/header/headerNav.scss
+++ b/frontend/assets/css/header/headerNav.scss
@@ -1,9 +1,12 @@
 .main-header {
   width: 100%;
-  height: 5rem;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 2rem;
+  // height: 5rem;
+  // display: flex;
+  // justify-content: space-between;
+
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  padding: 0.8rem 2rem;
   background-color: $sand;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 
@@ -19,6 +22,11 @@
   /* main logo inside header*/
   .walkit-logo {
     place-self: center;
+    align-self: center;
+    margin: 0;
+    svg {
+      height: 3rem;
+    }
   }
 
   /* font awesome icons inside header */
@@ -30,10 +38,10 @@
   }
 
   /* hamburger nav button specified */
-  #menu-button {
-    min-width: 30px;
-    min-height: 30px;
-  }
+  // #menu-button {
+  //   width: 30px;
+  //   height: 30px;
+  // }
 
   .nav-links {
     display: block;
@@ -46,5 +54,14 @@
     @extend .nav-links;
     margin-top: 5rem;
     margin-bottom: 1rem;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 0 2rem;
+    .walkit-logo {
+      svg {
+        height: 5rem;
+      }
+    }
   }
 }
